kaden-wu-chatbot/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaden-wu-chatbot
  namespace: rehs-2026-chatbot
spec:
  replicas: 2                   
  selector:
    matchLabels:
      app: kaden-wu-chatbot
  template:
    metadata:
      labels:
        app: kaden-wu-chatbot
    spec:
      containers:
      - name: kaden-wu-chatbot
        image: mooncaller27/kaden-wu-chatbot:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
