kaden-wu-chatbot/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-svc
  namespace: rehs-2026-chatbot
spec:
  type: ClusterIP
  selector:
    app: kaden-wu-chatbot
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8501
