kaden-wu-chatbot/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: rehs-2026-chatbot
  annotations:
    haproxy-ingress.github.io/timeout-client: "3600s"
    haproxy-ingress.github.io/timeout-server: "3600s"
spec:
  ingressClassName: haproxy
  rules:
    - host: kaden-wu-chatbot.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-svc
                port:
                  number: 80
  tls:
    - hosts:
        - kaden-wu-chatbot.nrp-nautilus.io
